# FootprintTool

./: .gitignore  CMakeLists.txt  README.md  cinstall.py  conanfile.py  configure.py  install.py  vcpkg.json  vinstall.py
src/: CMakeLists.txt  Footprint.hpp  clipper2.hpp  double2.hpp  double3.hpp  generateStep.cpp  generateStep.hpp  generateVrml.cpp  generateVrml.hpp  main.cpp
support/conan/: README.md
support/conan/windows/: cpresets.txt  presets.txt
support/vcpkg/: README.md
support/vcpkg/windows/: vpresets.txt
